    so there's no need to manually require it from a `before:` block in
    each spec file any more.

  - You can easily run Specl from the top of your source tree without
    any special LUA_PATH munging in Makefiles or wrapper scripts. Just
    set `package.path` and `package.cpath` to find the code being specced
    out in a 'spec_helper.lua' in each directory containing spec files.


* Noteworthy changes in release 10 (2014-01-15) [stable]

** Bug fixes:

  - Using specl.shell when Specl itself and the process being
    spawned require different versions of Lua no longer crashes
    with corrupted shared package.path settings.


* Noteworthy changes in release 9 (2013-12-09) [stable]

** New features:

  - Vastly improved error diagnostics for syntax errors in spec
    files, reporting filename and line-number of error locations,
    and without spurious Lua-runtime stack traces.

  - Support for custom per-matcher adaptors. See docs/specl.md for
    documentation.

  - New 'a_permutation_of' adaptor for contain matcher, that allows
    expectations for operations that are inherently unordered:

      t = {}
      for _, v in pairs (a_big_table) do t[#t + 1] = v end
      expect (a_big_table).should_contain.a_permutation_of (t)

    It will fail unless the same set of elements are present in the
    expect argument values, or the expect argument keys; like the
    other 'contain' adaptors it works with strings and objects too.

  - New '--unicode' command-line option to support unicode in spec
    files, at the expense of inaccurate line-numbers in error
    messages.

  - Works correctly without ansicolors installed (albeit without
    displaying any color!).

  - If 'luaposix' is installed where Specl can find it, the report
    and progress formatters will use it to display the time spent
    running specifications much more accurately.

** Incompatible changes:

  - Requires lyaml 4 or newer.

  - Unicode characters in spec files are no longer supported by